# ground-motion-packet

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  azure-pipelines.yml  install.sh  pyproject.toml  setup.py
doc_source/: cli.md  conf.py  demo.md  dev.md  examples.md  geojson.md  index.md  pydantic_demo.md
doc_source/_static/css/: custom.css
doc_source/specification/: base.md  event.md  index.md
doc_source/specification/features/: index.md  metrics_dict.md  streams_traces.md
docs/: .buildinfo  Gemfile  README.md  _config.yml  about.md  cli.html  demo.html  dev.html  examples.html  genindex.html  geojson.html  geojson.md  getting_started.html  guidelines-provider.md  index.html  index.md  objects.inv  pydantic_demo.html  search.html  searchindex.js  terms.html  terms.md
docs/_pages/: geojson.md  terms.md
docs/_pages/specification/: base.md  event.md  guidelines-provider.md  provenance.md
docs/_pages/specification/features/: metrics_dict.md  station.md  streams_traces.md
docs/_posts/: 2021-10-17-welcome-to-jekyll.markdown
docs/_sources/: cli.md.txt  dev.md.txt  examples.md.txt  getting_started.md.txt  index.md.txt  terms.md.txt
docs/_sources/specification/: base.md.txt  event.md.txt  index.md.txt  provenance.md.txt
docs/_sources/specification/features/: index.md.txt  metrics_dict.md.txt  station.md.txt  streams_traces.md.txt
docs/_static/: documentation_options.js
docs/specification/: base.html  base.md  event.html  event.md  index.html  index.md  provenance.html  provenance.md
docs/specification/features/: index.html  index.md  metrics_dict.html  metrics_dict.md  station.html  station.md  streams_traces.html  streams_traces.md
examples/: borehole_example.json  example1.json  multichannel_example.json  sps-100-200-example.json
gmpacket/: feature.py  gmpformat.py  packet.py  provenance.py  scan.py  validate.py
gmpacket/data/examples/: borehole_example.json  example1.json  multichannel_example.json  sps-100-200-example.json
gmpacket2/: feature.py  provenance.py  utils.py
notebooks/: GMP-demo.ipynb  pydantic_demo.ipynb
scripts/: README.md  metrics_structure.py
tests/gmpacket/: test_feature.py  test_packet.py  test_provenance.py  test_utils.py
tests/gmpacket/data/: full_packet.json
