[project]
name = "gmpacket"
version = "0.1.1"
description = "ANSS Ground Motion Packet"
authors = [
    {name = "Mike Hearne", email="mhearne@usgs.gov"},
    {name = "Eric Thompson", email="ethompson@usgs.gov"},
    {name = "Ellen Yu", email="eyu@caltech.edu"},
]

license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = "<=3.11"

keywords = ["ground motion", "earthquake"]


dependencies = [
    "geopy>=2.1.0",
    "pandas>=1.4.0",
    "pydantic[email]>=1.10.0",
]

dynamic = ["entry-points"]

[project.scripts]
gmpformat = "gmpacket.bin.gmpformat:main"

[tool.setuptools]
packages = ["gmpacket", "gmpacket.bin"]



[project.optional-dependencies]
dev = [
    "altair",
    "build>=0.7.0",
    "black>=21",
    "flake8>=3.9",
    "furo",
    "ipython>=7.26",
    "myst-nb",
    "myst-parser",
    "nbsphinx",
    "notebook>=6.4.1",
    "twine>=3.8.0",
    "recommonmark",
    "requests>=2",
    "setuptools_scm",
    "sphinx>3.0.0",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinx-inline-tabs",
    "sphinxcontrib-programoutput"
]
test = [
    "deepdiff>=5.7.0",
    "openpyxl>=3.0.9",
    "pytest>=6.2",
    "pytest-cov>=2.12.0",

]

[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "setuptools_scm[toml]>=3.4",
  "Cython>=0.29.23",
  "numpy",
]
build-backend = "setuptools.build_meta"
