[project]
name = "gmpacket"
dynamic = ["version"]
description = "ANSS Ground Motion Packet"
authors = [
    {name = "Mike Hearne", email="mhearne@usgs.gov"},
    {name = "Eric Thompson", email="ethompson@usgs.gov"},
    {name = "Ellen Yu", email="eyu@caltech.edu"},
]

license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = "<=3.11"

keywords = ["ground motion", "earthquake"]


dependencies = [
    "geopy>=2.1.0",
    "pandas>=1.4.0",
    "pydantic[email]>=1.10.0",
]

[tool.setuptools]
packages = ["gmpacket"]



[project.optional-dependencies]
dev = [
    "black>=21",
    "flake8>=3.9",
    "ipython>=7.26",
    "setuptools_scm",
    "notebook>=6.4.1",
]
test = [
    "deepdiff>=5.7.0",
    "openpyxl>=3.0.9",
    "pytest>=6.2",
    "pytest-cov>=2.12.0",

]
doc = [
    "sphinx>3.0.0",
    "requests>=2",
    "furo",
    "myst-nb",
    "myst-parser",
    "altair",
    "nbsphinx",
    "recommonmark",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinx-inline-tabs",
    "sphinxcontrib-programoutput"
]
build = [
    "build",
    "twine",
]

[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "setuptools_scm[toml]>=3.4",
  "Cython>=0.29.23",
  "numpy",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]